# proof-system

./: .gitignore  Cargo.toml  README.md  justfile
api/: Cargo.toml  input.json
api/src/: compressed_proof_builder.rs  delayed_priority_queue.rs  eff_ecdsa_input.rs  ivc_proof_folder.rs  key_value_storage.rs  main.rs  merkle_tree_updater.rs  proof_system_message.rs  server.rs  user.rs
circuits/: Cargo.toml  merkle.json
circuits/data/: ivc - Copy.json  ivc.json  ivc1.json  ivc2.json  ivc_combined.json  ivc_new.json  merkle.json
circuits/src/: main.rs  private_input.rs
circuits/src/Sage/: ecdsa_secp_secq.ipynb
circuits/src/Sage/.ipynb_checkpoints/: ecdsa_secp_secq-checkpoint.ipynb
circuits/src/ecdsa_tests/: double_test.circom
circuits/src/ecdsa_tests/double_test_js/: double_test.wasm
circuits/src/ecdsa_tests/eff_ecdsa_test_js/: eff_ecdsa_test.wasm
circuits/src/eff_ecdsa_membership/: eff_ecdsa.circom  eff_ecdsa_test.json  eff_ecdsa_to_addr.circom  test_1.json  test_2.json
circuits/src/eff_ecdsa_membership/eff_ecdsa_js/: eff_ecdsa.wasm
circuits/src/eff_ecdsa_membership/eff_ecdsa_to_addr_js/: eff_ecdsa_to_addr.wasm  test.json  test_2.json
circuits/src/merkle_tree/: ascii_binary_to_decimal.circom  batch_efficient_ecdsa_pubkey.circom  batch_efficient_ecdsa_pubkey_main.circom  bits2num_msg.circom  comp_result_test.circom  decimal_array_to_decimal.circom  decimal_to_decimal_array.circom  eth_addr.circom  ethr_addr_test.json  ethr_address_ascii_binary_to_decimal.circom  gen_eth_address_test.circom  gen_eth_address_test.json  input.json  inverse_test.circom  ivc.circom  ivc2.json  ivc_agg.circom  ivc_batch.circom  ivc_message.json  ivc_minus_tp_assert.circom  ivc_perf.circom  keccak_test.circom  keccak_test.json  keccak_test_32_256.json  keccak_test_message.json  merketreeupdate_test.json  merkle_init.circom  merkle_init_test.json  merkle_init_zeros_test.json  merkletreeupdate.circom  merkletreeupdate_test.circom  poseidon_test.circom  simple.circom  test_2.json  tree.circom
circuits/src/merkle_tree/ascii_binary_to_decimal_js/: ascii_binary_to_decimal.wasm
circuits/src/merkle_tree/bits2num_msg_js/: bits2num_msg.wasm  witness.ws
circuits/src/merkle_tree/comp_result_test_js/: 1.json  comp_result_test.wasm  witness.wts
circuits/src/merkle_tree/decimal_to_decimal_array_js/: decimal_to_decimal_array.json  decimal_to_decimal_array.wasm
circuits/src/merkle_tree/eth_addr_js/: ethr_addr_test.json
circuits/src/merkle_tree/ethr_address_ascii_binary_to_decimal_js/: eth_adress_ascii_binary_decimal_test.json  ethr_address_ascii_binary_to_decimal.wasm
circuits/src/merkle_tree/gen_eth_address_test_js/: gen_eth_address_test.wasm
circuits/src/merkle_tree/inverse_test_js/: inverse_test.json  inverse_test.wasm
circuits/src/merkle_tree/ivc_js/: ivc.wasm
circuits/src/merkle_tree/ivc_minus_tp_assert_js/: ivc_minus_tp_assert.wasm
circuits/src/merkle_tree/merkle_init_js/: merkle_init.wasm  merkle_init_m0_test.json  merkle_init_zeros_log.txt  merkle_init_zeros_test.json  witness.ws  witness.wts
circuits/src/merkle_tree/merkletreeupdate_test_js/: merkletreeupdate_test.wasm
circuits/src/merkle_tree/poseidon_test_js/: poseidon_test.json  poseidon_test.wasm  witness.wts
circuits/src/merkle_tree/simple_js/: simple.wasm
circuits/src/merkle_tree/text_binary_test_js/: text_binary_test.json  text_binary_test.wasm  witness.wts
circuits/src/merkle_tree/tree_js/: merkle.json  tree.wasm
common/: Cargo.toml
common/src/: lib.rs
common/src/utils/: bits.rs  mod.rs  time.rs
merkle_tree/: Cargo.toml  test.py
merkle_tree/src/: hash_of_null.rs  lib.rs
merkle_tree/src/hash_store/: db.rs  local.rs  mod.rs
merkle_tree/src/leaf_index_store/: db.rs  local.rs  mod.rs
poseidon/: Cargo.toml
poseidon/src/: k256_consts.rs  lib.rs  poseidon_k256.rs
research/: ecdsa_secp_secq.ipynb  keccak_eth_acc.ipynb
research/.ipynb_checkpoints/: ecdsa_secp_secq-checkpoint.ipynb  keccak_eth_acc-checkpoint.ipynb
