# [package]
# name    = "t3-proof-system"
# version = "0.1.0"
# edition = "2021"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# # [[bin]]
# # name = "proof_system"
# # path = "api/src/main.rs"

# [dependencies]
# api = { path = "api" }

[workspace]
members = ["api", "common", "poseidon", "merkle_tree", "circuits"]

[workspace.dependencies]
reqwest            = { version = "0.11.*", features = ["json"] }
serde_json         = "1.0.*"
tokio              = { version = "1.35.*", features = ["full"] }
axum               = { version = "0.7.*", features = ["macros"] }
tower              = "0.4.*"
tower-http         = { version = "0.5.*", features = ["trace"] }
serde              = { version = "*", features = ["derive"] }
tracing            = "0.1.*"
tracing-subscriber = "0.3.*"
rand               = "0.8.*"
nova-scotia        = { git = "https://github.com/Terminal-3/Nova-Scotia.git", branch = "secp_secq" }
web3               = "0.19.0"

anyhow      = "1.0.65"
bellperson  = { version = "0.25", default-features = false }
byteorder   = "1.4.3"
ff          = { version = "0.13", features = ["derive"] }
hex-literal = "0.4.*"
itertools   = "0.12.*"
nova-snark  = "0.24.*"
num-bigint  = { version = "0.4", features = ["serde", "rand"] }
num-traits  = "0.2.15"

pasta_curves   = "0.5"
hex            = "0.4.*"
tracing-test   = "0.2.*"
redis          = { version = "0.24.0", features = ["tokio-comp"] }
redis-test     = "0.3.*"
bitvec         = "1.0.*"
k256           = { version = "0.13.*", features = ["arithmetic", "expose-field"] }
elliptic-curve = { version = "0.13.*", features = ["arithmetic"] }
