[package]
name    = "poseidon"
version = "0.1.0"
edition = "2021"


[dependencies]
ff                       = "0.12.0"
hex.workspace            = true
hex-literal.workspace    = true
getrandom                = { version = "0.2.8", features = ["js"] }
lazy_static              = "1.4.0"
num-traits               = "0.2"
k256.workspace           = true
elliptic-curve.workspace = true
#typenum = { version = "1.16.0", optional = true }
#neptune = { version = "8.1.0", optional = true }
#blstrs = { version = "0.6.0", optional = true }
